# call_center

./: .gitignore  README.md  main.py  pyproject.toml
UT/: __init__.py  forms.py  models.py  routes.py  site.db  test.py  view_helpers.py
UT/calls/: routes.py
UT/templates/: appointment.html  layout.html  location.html  welcome.html
UT/website/: forms.py  routes.py
rebuild/: clinics.csv  clinics_add.py  employee.py  how_to  loc.py
tests/: conftest.py
tests/functional/: test_functions.py
tests/unit/: test_models.py
ut/: __init__.py  config.py  database_test_site.db  models.py  site.db
ut/call_center/: messenger.py  routes.py  view_helpers.py
ut/calls/: routes.py  view_helpers.py
ut/confirmations/: routes.py  view_helpers.py
ut/employee/: forms.py  routes.py  utils.py
ut/employee/employee_templates/: e_appointment.html  e_layout.html  e_location.html  e_locationwithdate.html  e_pendingappt.html  e_select_appt.html  login.html  patient.html  register.html
ut/employees/: routes.py
ut/public/: forms.py  routes.py  utils.py
ut/public/public_pages/: about.html  appointment.html  layout.html  location.html  my_appointment.html  welcome.html
ut/rebuild/: clinics.csv  employee.py  loc.py
ut/reschedule/: forms.py  routes.py  utils.py
ut/reschedule/r_templates/: choose_date4.html  create6.html  find_appointment3.html  find_patient2.html  r_layout0.html  select_time5.html  start1.html
ut/static/: helpers.js  style.css
ut/templates/: appointment.html  location.html  welcome.html
ut/website/: forms.py  routes.py  utils.py
(+9 files in other folders)
