[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "utphysicians2"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
Flask-SQLAlchemy = "^2.4"
Flask-Bcrypt = "^0.7.1"
Flask-WTF = "^0.14.3"
twilio = "^6.37"
pandas = "^1.0"
[tool.poetry.dev-dependencies]
